# tca-server

./: .gitignore  CMakeLists.txt  kamera_analyse.cpp  kamera_analyse.h  kamera_finder_analyse.cpp  kamera_finder_analyse.h  pid_controller.cpp  pid_controller.h
lane_detection/: CMakeLists.txt  Strasenfinder2.cpp  Strasenfinder2.h  laneDetection.cpp  laneDetection.h  laneFindingAlgorithmus.cpp  laneFindingAlgorithmus.h
lane_detection/image_preprocessing/: ImagePreProcessing.cpp  ImagePreProcessing.h
lane_detection/lane_finder/: Strasenfinder2.cpp  Strasenfinder2.h
lane_detection/lane_handler/: lane_handler.cpp  lane_handler.h
libcamera/: detect_id_of_cameras.cpp  full_image_test.cpp
socket_test/: CMakeLists.txt  pc_socket.cpp  pc_socket.h  rasp_socket.cpp  raspi_kamera.cpp
working-code/: kamera_ein_frame_test_working.cpp
